[tool.poetry]
name = "planet-tracker"
version = "3.0.0"
description = "Server for Planet Tracker web app"
authors = ["Dean Shaff <dean.shaff@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
ephem = "^3.7.7"
gunicorn = "^20.0.4"
litestar = {extras = ["standard"], version = "^2.4.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
anyio = "^4.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
